attempt to fix jump on img jump on scroll

--- a/css/ie.css
+++ b/css/ie.css
@@ -3,6 +3,6 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: rgba(128, 128, 128, 0.1);
+  background-color: rgba(27, 26, 26, 0.6);
   background-blend-mode: unset;
 }
