--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ nav a:hover{
 .parallax-img {
   /*https://css-tricks.com/basics-css-blend-modes/*/
   height: 100%;
+  min-height: 100%; 
   display: block;
   background-attachment: fixed;
   background-position: right 0px bottom 0px;
@@ -87,7 +88,7 @@ nav a:hover{
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: rgba(128, 128, 128, 0.1);
+    background-color: rgba(27, 26, 26, 0.6);
     background-blend-mode: unset;
   }
 }
